--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="particles">
         <div id="intro" class="intro">
-            <h1>JULIO RODRIGUES</h1>
+            <h1>Julio Rodrigues</h1>
             <span>Web Developer</span>
         </div>
         
@@ -23,9 +23,9 @@
                         <div class="col s12">
                             <nav>
                                 <ul>
-                                    <li>Sobre</li>
-                                    <li>Projetos</li>
-                                    <li>Contatos</li>
+                                    <li><a href="#sobre">Sobre</a></li>
+                                    <li><a href="projetos.html">Projetos</a></li>
+                                    <li><a href="#contatos">Contatos</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -34,7 +34,7 @@
             </div> 
         </div>
     </header>
-    <section class="about-me">
+    <section id="sobre" class="about-me">
         <div class="container">
             <h2>Sobre mim</h2>
             <div class="row">
@@ -58,7 +58,7 @@
             </div>
         </div>
     </section>
-    <section class="skills">
+    <section id="skills" class="skills border-shadow">
         <div class="container">
             <h2>Skills</h2>
             <div class="row">
@@ -88,53 +88,24 @@
             </div>
         </div>
     </section>
-    <section class="projetos">
+    <section id="contatos" class="contact">
         <div class="container">
-            <h2>Projetos</h2>
+            <h2>Contatos</h2>
             <div class="row">
-                <div class="col s4">
-                    <div class="thumbs-projects">
-                        <img src="https://lh3.googleusercontent.com/zYMBUBA13HtHf7QTHa4e0ieBNZclqQLxUcy2uSuVKruUbbz_mTT5o4gR5cQz_eOlKwM=w1280-h703-rw" alt="">
-                        <div class="content-projects">
-                            <div class="row">
-                                <span>CarGuru</span>
-                            </div>
-                            <div class="row">
-                                <p>Aplicativo para lavagem automotiva delivery</p>
-                                <p><a href="https://play.google.com/store/apps/details?id=com.carguruclub.carguru">Veja mais</a></p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col s6">
+                    <ul>
+                        <li>WhatsAPP: (11) 963450132</li>
+                        <li>Facebook: <a href="https://www.facebook.com/julio.rodrigues.161?ref=bookmarks" target="_blank"> Julio Rodrigues</a></li>
+                        <li>Linkedin: <a href="https://www.linkedin.com/in/julio-rodrigues-56060179/" target="_blank"> Julio Rodrigues</a></li>
+                    </ul>
                 </div>
-                <div class="col s4">
-                    <div class="thumbs-projects">
-                        <img src="./thumbs/thumb-rufiz.png" alt="">
-                        <div class="content-projects">
-                            <div class="row">
-                                <span>Rufiz</span>
-                            </div>
-                            <div class="row">
-                                <p>Agência de Soluções em tecnologia</p>
-                                <p><a href="https://www.rufiz.com.br">Veja mais</a></p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col s6">
+                    <ul>
+                        <li>Envie seu email aqui: <a href="http://https://goo.gl/forms/0O7JLQQ53uYenPcq2">Enviar email</a></li>
+                        <li>GitHub: <a href="http://github.com/juulhao">juulhao</a></li>
+                        <li>Twitter: <a href="http://twitter.com/juulhao">@juulhao</a></li>
+                    </ul>
                 </div>
-                <div class="col s4">
-                    <div class="thumbs-projects">
-                        <img src="./thumbs/thumb-astromelia.png" alt="">
-                        <div class="content-projects">
-                            <div class="row">
-                                <span>Astromelia</span>
-                            </div>
-                            <div class="row">
-                                <p>Website de eventos comemorativos</p>
-                                <p><a href="https://www.astromeliaeventos.com.br">Veja mais</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
