Correção campo email

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col s6">
                     <ul>
-                        <li>Envie seu email aqui: <a href="http://https://goo.gl/forms/0O7JLQQ53uYenPcq2">Enviar email</a></li>
+                        <li>Envie seu email aqui: <a href="http://goo.gl/forms/0O7JLQQ53uYenPcq2">Enviar email</a></li>
                         <li>GitHub: <a href="http://github.com/juulhao">juulhao</a></li>
                         <li>Twitter: <a href="http://twitter.com/juulhao">@juulhao</a></li>
                     </ul>
