--- a/projetos.html
+++ b/projetos.html
@@ -37,7 +37,7 @@
         <div class="container">
             <h2>Projetos</h2>
             <div class="row">
-                <div class="col s4">
+                <div class="col s12 md4 lg4">
                     <div class="projects-thumbs">
                         <img src="thumbs/rufiz-thumb.png">
                         <div class="overlay">
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s12 md4 lg4">
                     <div class="projects-thumbs">
                         <img src="thumbs/carguru-thumb.png">
                         <div class="overlay">
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s12 md4 lg4">
                     <div class="projects-thumbs">
                         <img src="thumbs/cti-thumb.png">
                         <div class="overlay">
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s12 md4 lg4">
                     <div class="projects-thumbs">
                         <img src="thumbs/astromelia-thumb.png">
                         <div class="overlay">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s12 md4 lg4">
                     <div class="projects-thumbs">
                         <img src="thumbs/thumb-pet.png">
                         <div class="overlay">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s12 md4 lg4">
                     <div class="projects-thumbs">
                         <img src="thumbs/danelar-thumb.png">
                         <div class="overlay">
