--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="nav">
                     <div class="row">
-                        <div class="col s12">
+                        <div class="col s12 md12">
                             <nav>
                                 <ul>
                                     <li><a href="#sobre">Sobre</a></li>
@@ -38,12 +38,12 @@
         <div class="container">
             <h2>Sobre mim</h2>
             <div class="row">
-                <div class="col s4">
+                <div class="col s12 md4 lg4">
                     <div class="avatar-thumb">
                         <img src="https://scontent.fgru4-1.fna.fbcdn.net/v/t1.0-9/19396969_1395641827191018_3822685294000959711_n.jpg?_nc_cat=0&oh=0f9bb9d96ae024eba8cb6087ef0cd5fe&oe=5B576B23" alt="">
                     </div>
                 </div>
-                <div class="col s8">
+                <div class="col s12 md4 lg4">
                     <div class="description">
                         <p>
                             Me Chamo Julio Rodrigues, tenho 25 anos, sou de São Paulo - Guarulhos.
